Only propagate the body background to the canvas in HTML documents; don't do it for XHTML.   Bug 214969, r+sr=dbaron